Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95073

TextEdit inconsistency with some key events (modifiers)

XMLWordPrintable

    • 6ca31ca88a7ee86308e329afd6cd2c90a050d4d9 (qt/qtdeclarative/dev) 74ae8a118667c84e1abb16856a7679036cd69808 (qt/qtdeclarative/6.2) 8c1aa278e20d2cf3a4b4c5c5410f323a64338469 (qt/qtdeclarative/6.1)

      There is inconsistency with the handling of some key events (modifiers) occurring with the QML TextEdit control. When the TextEdit is focused and the shift key is pressed, the shift-key press event is propagated to parent. But, when the shift key is released, the event seems to be accepted internally and the event and the event does not propagate to parent.

      Please find a simple example showing the problem.
      Run the example and press the shift key. The pressed event arrives to the external focus scope while the release event does not arrive.

        1. qtbug95073.zip
          2 kB
          Shveta Mittal
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            shmittal Shveta Mittal
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes