TextEdit: ignore all key release events

Input events are accepted by default, and get ignored by the default
event handler implementations. By overriding an event handler, the events
get accepted, unless ignored explicitly.

Since QQuickTextControl does not handle any key release events, it should
explicitly ignore all of them, not just Key_Back (ignoring of which was
added in 798112b6532a3c66abff630327d29a980a525f25).

Fixes: QTBUG-95073
Pick-to: 6.2 6.1
Change-Id: I09105fd8ebef73c03eb2083149643d188a2f1360
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>